Instance 2 bugs planted